TA-173: Add consumer tests for Probate Back Office