@@ -23,6 +23,7 @@ plugins {
   id 'com.gorylenko.gradle-git-properties' version '1.4.21'
   id 'info.solidsoft.pitest' version '1.3.0'
   id 'jacoco'
+  id 'au.com.dius.pact' version '4.1.10'
 }
 
 apply plugin: 'project-report'
@@ -124,6 +125,14 @@ sourceSets {
     }
     resources.srcDir file('src/caseCreator/resources')
   }
+  contractTest {
+    java {
+      compileClasspath += main.output
+      runtimeClasspath += main.output
+      srcDir file('src/contractTest/java')
+    }
+    resources.srcDir file('src/contractTest/resources')
+  }
 }
 
 task smoke(type: Test) {
@@ -153,6 +162,16 @@ task caseCreator(type: Test) {
   finalizedBy aggregate
 }
 
+
+task contract(type: Test) {
+  group = 'Delivery pipeline'
+  description = 'Runs the consumer Pact tests'
+  jvmArgs '--enable-preview'
+  testClassesDirs = sourceSets.contractTest.output.classesDirs
+  classpath = sourceSets.contractTest.runtimeClasspath
+  systemProperty 'pact.rootDir', "pacts"
+}
+
 gitProperties {
   gitPropertiesDir = new File("${project.rootDir}/src/main/resources/uk/gov/hmcts/probate/sol")
   keys = ['git.commit.id','git.commit.time']
@@ -177,7 +196,8 @@ def versions = [
         probateCommonsVersion           : '1.0.6',
         ccdClient                       : '4.7.3',
         mapStruct                       : '1.2.0.Final',
-        serviceAuthVersion              : '3.0.0'
+        serviceAuthVersion              : '3.0.0',
+        pact_version                    : '4.1.0'
 ]
 
 jacocoTestReport {
@@ -304,6 +324,18 @@ dependencies {
   testCaseCreatorCompile sourceSets.test.runtimeClasspath
   testCaseCreatorAnnotationProcessor group:'org.projectlombok', name: 'lombok', version: versions.lombok
   testCaseCreatorCompileOnly group:'org.projectlombok', name: 'lombok', version: versions.lombok
+
+
+  contractTestCompile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version : '2.9.8'
+  contractTestCompile group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact_version
+  contractTestCompile group: 'au.com.dius', name: 'pact-jvm-consumer-junit_2.12', version: '3.5.25'
+
+  contractTestCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+  contractTestRuntime group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+
+
+  contractTestCompile sourceSets.main.runtimeClasspath
+  contractTestCompile sourceSets.test.runtimeClasspath
 }
 
 tasks.withType(JavaCompile) {
@@ -328,5 +360,33 @@ task printVersion {
 run {
   if (debug == 'true') {
     jvmArgs = ['-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005']
+  }
+}
+
+project.ext {
+  pactVersion = getCheckedOutGitCommitHash()
+}
+
+task runAndPublishConsumerPactTests(type: Test){
+  logger.lifecycle("Runs pact Tests")
+  testClassesDirs = sourceSets.contractTest.output.classesDirs
+  classpath = sourceSets.contractTest.runtimeClasspath
+
+}
+
+runAndPublishConsumerPactTests.dependsOn contract
+
+runAndPublishConsumerPactTests.finalizedBy pactPublish
+
+def getCheckedOutGitCommitHash() {
+  'git rev-parse --verify --short HEAD'.execute().text.trim()
+}
+
+pact {
+  publish {
+    pactDirectory = 'pacts'
+    pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
+    tags = [System.getenv("PACT_BRANCH_NAME") ?:'Dev']
+    version = project.pactVersion
   }
 }
